--- a/css/about.css
+++ b/css/about.css
@@ -315,8 +315,16 @@ footer p {
 .contacts {
 	padding: 80px 0;
 	background: #ededed;
+        background-image: url("https://cdn.jsdelivr.net/gh/linjiangyu2/halo/img/music.webp");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
 }
 
+.cc {
+	opacity: 0.8;
+	border-radius: 5%;
+}
 .containers {
 	max-width: 800px;
 	margin: 0 auto;
@@ -351,18 +359,32 @@ textarea {
 	margin-bottom: 20px;
 	width: 100%;
 	font-size: 16px;
+	background-color: #f2f2f2; /* 设置背景颜色 */
+        //border: none; /* 取消边框 */
+        padding: 12px 20px; /* 设置内间距 */
+        margin: 8px 0; /* 设置外间距 */
+        box-sizing: border-box; /* 设置盒模型为 border-box */
+        width: 100%; /* 设置宽度为 100% */
 }
 
 input[type="submit"] {
-	background: #2ecc71;
-	color: #fff;
-	border: none;
-	padding: 10px 20px;
-	border-radius: 5px;
-	font-size: 18px;
-	cursor: pointer;
+        background-color: #4CAF50; /* 设置按钮背景颜色 */
+        color: white; /* 设置按钮文字颜色 */
+        padding: 12px 20px; /* 设置按钮内间距 */
+        margin: 8px 0; /* 设置按钮外间距 */
+        border: none; /* 取消按钮边框 */
+        cursor: pointer; /* 修改鼠标悬停样式为手型 */
+	//background: #2ecc71;
+	//color: #fff;
+	//border: none;
+	//padding: 10px 20px;
+	//border-radius: 5px;
+	//font-size: 18px;
+	//cursor: pointer;
 }
 
 input[type="submit"]:hover {
-	background: #27ae60;
+	//background: #27ae60;
+        background-color: #45a049;
+        color: white;
 }
